# texas_holdem

./: .coverage  .editorconfig  .gitignore  .python-version  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  main.yml
src/: __main__.py  card.py  deck.py  field.py  games.py  player.py  role.py  winner.py
tests/: conftest.py  test_card.py  test_deck.py  test_role.py
tests/func/: test_card.py  test_deck.py  test_field.py  test_games.py  test_player.py  test_role.py  test_winner.py
texas_holdem/: __init__.py  __main__.py  card.py  deck.py  field.py  games.py  judge_hand.py  make_deck.py  player.py  role.py  winner.py
texas_holdem.egg-info/: PKG-INFO  SOURCES.txt
